// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThesauriFormItem should render ThesauriFormField if single item is provided 1`] = `
<ThesauriFormField
  index={1}
  onChange={[MockFunction]}
  removeValue={[MockFunction]}
  value={
    Object {
      "id": "item1",
      "label": "Item1",
    }
  }
/>
`;

exports[`ThesauriFormItem should render ThesauriFromGroup if item with values is provided 1`] = `
<ThesauriFormGroup
  index={1}
  onChange={[MockFunction]}
  removeValue={[MockFunction]}
  value={
    Object {
      "id": "item1",
      "label": "Item1",
      "values": Array [
        Object {
          "label": "nested 1",
        },
        Object {
          "label": "nested 2",
        },
      ],
    }
  }
/>
`;
